# pyproject-doctor

./: .gitignore  .pre-commit-hooks.yaml  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
docs/: architecture.md  charter.md  logo-prompt.md
examples/: broken_pyproject.toml
src/pyproject_doctor/: __init__.py  cli.py  model.py  parse.py  sarif.py
src/pyproject_doctor/checks/: __init__.py  classifiers.py  dependencies.py  dynamic.py  emails.py  entry_points.py  files.py  license_expression.py  requires_python.py  urls.py  version.py
tests/: test_classifiers.py  test_cli.py  test_dependencies.py  test_dynamic.py  test_emails.py  test_entry_points.py  test_files.py  test_license_expression.py  test_requires_python.py  test_sarif.py  test_urls.py  test_version.py
tests/data/: bad_dep.toml  bad_email.toml  bad_entry_point.toml  bad_readme.toml  bad_url.toml  bad_version.toml  clean.toml  dynamic_absent.toml  dynamic_field_unknown.toml  dynamic_malformed.toml  dynamic_name_forbidden.toml  dynamic_static_conflict.toml  dynamic_valid.toml  license_malformed_operator.toml  license_plus_deprecation.toml  license_table_form.toml  license_unbalanced_parens.toml  license_unknown_id.toml  license_valid_and.toml  license_valid_or.toml  license_valid_parens.toml  license_valid_simple.toml  license_valid_with.toml  requires_python_absent.toml  requires_python_invalid.toml  requires_python_unsatisfiable.toml  requires_python_valid.toml  unsatisfiable_dep.toml
