[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pyproject-doctor"
version = "0.4.0"
description = "Offline deep validator for pyproject.toml: file existence, URL and email format, PEP 440 version and PEP 508 specifier validity, version-constraint satisfiability, and entry-point format."
readme = "README.md"
license = {file = "LICENSE"}
authors = [{name = "Amaar Chughtai", email = "amaardevx@gmail.com"}]
keywords = ["pyproject", "packaging", "validator", "linter", "pep621", "pep508", "pre-commit"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]
requires-python = ">=3.10"
dependencies = [
    "packaging>=23.0",
    "tomli>=2.0; python_version < '3.11'",
]

[project.optional-dependencies]
classifiers = ["trove-classifiers>=2023.1.1"]
dev = [
    "pyproject-doctor[classifiers]",
    "pytest>=7.0",
    "mypy>=1.0",
    "ruff>=0.1.0",
    "trove-classifiers>=2023.1.1",
]

[project.scripts]
pyproject-doctor = "pyproject_doctor.cli:main"

[project.urls]
Homepage = "https://github.com/amaar-mc/pyproject-doctor"
Repository = "https://github.com/amaar-mc/pyproject-doctor"
"Bug Tracker" = "https://github.com/amaar-mc/pyproject-doctor/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/pyproject_doctor"]

[tool.mypy]
strict = true
python_version = "3.10"

[tool.ruff]
src = ["src"]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[[tool.mypy.overrides]]
module = ["tomli"]
ignore_missing_imports = true
